varnish/tests/fail/error_vcl_rename_outside_vmod.rs
#[vcl_rename(bar)]
pub fn foo() -> i64 {
    0
}

fn main() {}
