varnish/tests/fail/error_vcl_rename_outside_vmod.stderr
error: cannot find attribute `vcl_rename` in this scope
 --> tests/fail/error_vcl_rename_outside_vmod.rs:1:3
  |
1 | #[vcl_rename(bar)]
  |   ^^^^^^^^^^
